# easy-django-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
easy_django_cli/: __init__.py  cli.py
tests/: conftest.py  manage.py  settings.py  test_cli.py
